# slm

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
src/: train.py
src/basics/: mask.py  pos.py
src/components/: activation.py  byteDataset.py  bytetokenizer.py  multiheadAttention.py  pos.py  tokenizer.py  utils.py
src/components/model/: attention.py  block.py  ffn.py  gpt.py  kvcache.py  multiheadAttention.py  rms_norm.py
src/data/: dataset.py  tokenizer.py
src/training/: accumulator.py  logging.py  scheduler.py
tests/: test_basics.py  test_kvcache.py  test_rmsNorm.py  test_rope.py
